modified:   materiaal.tex

--- a/materiaal.tex
+++ b/materiaal.tex
@@ -3,7 +3,7 @@
 \usepackage{graphicx}
 \usepackage{unicode-math}
 \begin{document}
-\section*{Hulp materiaal bij toets}
+\section*{Hulpmateriaal bij toets}
 \subsection*{standaardlimieten type $\frac{0}{0}$}
 \begin{equation}
 \lim_{x\to0}\frac{\sin\left(x\right)}{x}=1
@@ -45,13 +45,13 @@ $a^x$ & \ln(a)\cdot a^x \\
 $\ln\left|x\right|$ & $\frac{1}{x}$ \\
 \hline
 $^{a}\log\left|x\right|$ & $\frac{1}{x\ln a}$ \\ \hline
-$\sinh x$ & $\cosh x$ \\ \hline
-$\cosh x$ & $\sinh x$ \\ \hline
-$\tan x$ & $\frac{1}{\cos^2\left(x\right)}$ \\ \hline
-$\cot x $ & $-\frac{1}{\sin^2\left(x\right)}$ \\ \hline
-$\arcsin x$ & $\frac{1}{\sqrt{1-x^2}}$ \\ \hline
-$\arccos x$ & $\frac{-1}{\sqrt{1-x^2}}$ \\ \hline
-$\arctan x$ & $\frac{1}{1+x^2}$ \\ \hline
+$\sinh \left(x\right)$ & $\cosh  \left(x\right)$ \\ \hline
+$\cosh \left(x\right)$ & $\sinh \left(x\right)$ \\ \hline
+$\tan \left(x\right)$ & $\frac{1}{\cos^2\left(x\right)}$ \\ \hline
+$\cot \left(x\right) $ & $-\frac{1}{\sin^2\left(x\right)}$ \\ \hline
+$\arcsin \left(x\right)$ & $\frac{1}{\sqrt{1-x^2}}$ \\ \hline
+$\arccos \left(x\right)$ & $\frac{-1}{\sqrt{1-x^2}}$ \\ \hline
+$\arctan \left(x\right)$ & $\frac{1}{1+x^2}$ \\ \hline
 \end{tabular}
 \subsection*{kromming}
 \begin{equation}
